--- a/.hookz.yaml
+++ b/.hookz.yaml
@@ -1,13 +1,43 @@
-version: 2.4.1
-hooks:
-- type: pre-commit
-  actions:
-  - name: Hello Hookz!
-    url: null
-    args:
-    - -e
-    - Hello Hookz!
-    exec: /bin/echo
-    script: null
-sources:
-- source: github.com/devops-kung-fu/hinge@latest
+  version: 2.4.0
+  sources:
+    - source: github.com/anchore/syft/cmd/syft@latest
+    - source: github.com/devops-kung-fu/hinge@latest
+    - source: github.com/kisielk/errcheck@latest      
+    - source: golang.org/x/lint/golint@latest
+    - source: github.com/fzipp/gocyclo/cmd/gocyclo@latest
+  hooks:
+    - type: pre-commit
+      actions:
+        - name: "git: Pull (Ensure there are no upstream changes that are not local)"
+          exec: git
+          args: ["pull"]  
+        - name: "go: Tidy mod file"
+          exec: go
+          args: ["mod", "tidy"]
+        - name: "go: Update all dependencies to latest"
+          exec: go
+          args: ["get", "-u", "./..."]
+        - name: "golint: Lint all go files"
+          exec: golint
+          args: ["-set_exit_status", "./..."] #to error out, add the arg "-set_exit_status"
+        - name: "errcheck: Ensure that errors are checked"
+          exec: errcheck
+          args: ["-ignoretests", "./..."]
+        - name: "gocyclo: Check cyclomatic complexities"
+          exec: gocyclo
+          args: ["-over", "1", "."]
+        - name: Hinge
+          exec: hinge
+          args: ["."]
+        - name: "go: Build (Ensure pulled modules do not break the build)"
+          exec: go
+          args: ["build", "-v", "./..."]
+        - name: "go: Run all tests"
+          exec: go
+          args: ["test", "-v", "-coverprofile=coverage.out", "./..."]
+        - name: "go: Test coverage"
+          exec: go
+          args: ["tool", "cover", "-func=coverage.out"]
+        - name: "git: Add all changed files during the pre-commit stage"
+          exec: git
+          args: ["add", "."]
